--- a/public/assets/styles/app.scss
+++ b/public/assets/styles/app.scss
@@ -3,3 +3,9 @@
 @import 'mediaNavbar';
 @import 'footer';
 @import 'mainsechome';
+@import 'newArticle';
+@import 'staticContent';
+@import '_gaGrid';
+@import 'joGrid';
+@import 'contact';
+@import 'article';
