--- a/templates/base/nav.html.twig
+++ b/templates/base/nav.html.twig
@@ -1,7 +1,7 @@
 <body>
 	<header class="mainHeader">
 		<div class="logo">
-			<a href="">
+			<a href="/">
 				<img class="imgLogo" src="{{ asset('assets/img/logolr.jpg') }}" alt="logoLr"></img>
 		</a>
 	</div>
@@ -14,19 +14,19 @@
 	<ul class="navLinks">
 
 		<li class="navLink">
-			<a href="">Connexion</a>
+			<a href="/login">Connexion</a>
 		</li>
 		<li class="navLink">
-			<a href="">News</a>
+			<a href="/article">News</a>
 		</li>
 		<li class="navLink">
 			<a href="">Nos produits</a>
 		</li>
 		<li class="navLink">
-			<a href="">Nous rejoindre</a>
+			<a href="/join">Nous rejoindre</a>
 		</li>
 		<li class="navLink">
-			<a href="">Contact/FAQ</a>
+			<a href="/contact">Contact</a>
 		</li>
 	</ul>
 	<script src="assets/js/navbar.js"></script>
