--- a/public/assets/styles/_footer.scss
+++ b/public/assets/styles/_footer.scss
@@ -1,8 +1,6 @@
 .footer {
-    position: block;
-    right: 0;
+    width: 100%;
     bottom: 0;
-    left: 0;
     padding: 1rem;
     background-color: #efefef;
     display: flex;
