--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,7 +1,8 @@
-
+{% block head %}
+<link rel="stylesheet" href="{{asset('assets/styles/app.css')}}">
+{% endblock %}
 
 {% block body %}
-<link rel="stylesheet" href="{{asset('assets/styles/app.css')}}">
 <body>
 {% include 'base/nav.html.twig' %}
 
