crud complet, relation à faire et style à finir

--- a/public/assets/styles/_contact.scss
+++ b/public/assets/styles/_contact.scss
@@ -1,9 +1,24 @@
 .contTitle {
-    padding-top: 300px;
+    padding-top: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .cardContact {
     display: flex;
     margin: 0 auto;
     width: 30%;
+}
+
+.contLine {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.contText {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
