--- a/public/assets/styles/_article.scss
+++ b/public/assets/styles/_article.scss
@@ -1,3 +1,50 @@
 .articleGrid {
     display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding-top: 100px;
+
+
+    .article {
+        margin-bottom: 20px;
+        gap: 30px;
+    }
+
+    .articleTitle {
+        display: flex;
+        text-align: left;
+    }
+
+    .articleContent {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .articleAuthor {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .articleImg {
+        width: 250px;
+        height: 180px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0 auto;
+        border-radius: 20px;
+        margin-bottom: 20px;
+    }
+
+    .managementBtns {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 15px;
+
+        a {
+            text-decoration: none;
+        }
+    }
 }
