--- a/public/assets/styles/_joGrid.scss
+++ b/public/assets/styles/_joGrid.scss
@@ -10,6 +10,7 @@
         flex-direction: column;
     }
 
+
     .joImg {
         grid-area: "joImg";
         display: flex;
@@ -41,6 +42,7 @@
         margin: 0 auto;
         padding-top: 150px;
         padding-bottom: 30px;
+        width: 80%;
 
         @media screen and (max-width:900px) {
             padding-top: 10px;
@@ -64,10 +66,11 @@
 
     .midTxt {
         grid-area: "midTxt";
-        width: 90%;
+        width: 80%;
         display: flex;
         flex-direction: column;
         text-align: center;
+        margin-left: 50px;
 
         @media screen and (max-width:900px) {
             padding-top: 10px;
@@ -144,6 +147,7 @@
         margin: 0 auto;
         padding-top: 150px;
         padding-bottom: 30px;
+        width: 80%;
 
         @media screen and (max-width:900px) {
             padding-top: 10px;
