--- a/templates/article/edit.html.twig
+++ b/templates/article/edit.html.twig
@@ -24,15 +24,11 @@
 </div>
 
 <div>  
-{{form_label(form.slug)}}
-{{form_widget(form.slug)}}
+{{form_label(form.imageFile)}}
 </div>
-
-<div>  
-{{form_label(form.image)}}
-{{form_widget(form.image)}}
+<div>
+{{form_widget(form.imageFile)}}
 </div>
-
 
 <div>
 {{ form_row(form.submit)}}
