--- a/templates/pages/contact.html.twig
+++ b/templates/pages/contact.html.twig
@@ -8,7 +8,7 @@
 <h1 class="contTitle">Vous avez des questions ?</h1>
 <img src="{{asset('assets/img/chronologoback.png')}}" class="cardContact">
 <h2 class="contLine">Posez les sur mon adresse mail : katiapoirier.60@gmail.com</h2>
-<p>Ou sur nos réseaux présents en bas de page !</p>
+<p class="contText">Ou sur nos réseaux présents en bas de page !</p>
 {% include 'base/footer.html.twig' %}
 </body>
 
